framec/tests/snapshots/java_snapshots__consts.snap
---
source: framec/tests/java_snapshots.rs
expression: "compile_fixture(\"11_consts\", \"java\")"
---
class ConstsFrameEvent {
    String _message;
    java.util.ArrayList<Object> _parameters;

    ConstsFrameEvent(String message) {
        this._message = message;
        this._parameters = new java.util.ArrayList<>();
    }

    ConstsFrameEvent(String message, java.util.ArrayList<Object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class ConstsFrameContext {
    ConstsFrameEvent _event;
    Object _return;
    java.util.HashMap<String, Object> _data;
    boolean _transitioned = false;

    ConstsFrameContext(ConstsFrameEvent event, Object defaultReturn) {
        this._event = event;
        this._return = defaultReturn;
        this._data = new java.util.HashMap<>();
        this._transitioned = false;
    }
}

class ConstsCompartment {
    String state;
    java.util.ArrayList<Object> state_args;
    java.util.HashMap<String, Object> state_vars;
    java.util.ArrayList<Object> enter_args;
    java.util.ArrayList<Object> exit_args;
    ConstsFrameEvent forward_event;
    ConstsCompartment parent_compartment;

    ConstsCompartment(String state) {
        this.state = state;
        this.state_args = new java.util.ArrayList<>();
        this.state_vars = new java.util.HashMap<>();
        this.enter_args = new java.util.ArrayList<>();
        this.exit_args = new java.util.ArrayList<>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    ConstsCompartment copy() {
        ConstsCompartment c = new ConstsCompartment(this.state);
        c.state_args = new java.util.ArrayList<>(this.state_args);
        c.state_vars = new java.util.HashMap<>(this.state_vars);
        c.enter_args = new java.util.ArrayList<>(this.enter_args);
        c.exit_args = new java.util.ArrayList<>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class Consts {
    private java.util.ArrayList<ConstsCompartment> _state_stack;
    private ConstsCompartment __compartment;
    private ConstsCompartment __next_compartment;
    private java.util.ArrayList<ConstsFrameContext> _context_stack;
    public int step = 5;
    public int limit = 20;
    public int count = 0;

    public Consts() {
        _state_stack = new java.util.ArrayList<>();
        _context_stack = new java.util.ArrayList<>();
        this.__compartment = __prepareEnter("Running", new java.util.ArrayList<>(), new java.util.ArrayList<>());
        this.__next_compartment = null;
    }

    public static Consts __create(int step, int limit) {
        Consts c = new Consts();
        c.step = step;
        c.limit = limit;
        ConstsFrameEvent __e = new ConstsFrameEvent("$>", c.__compartment.enter_args);
        ConstsFrameContext __ctx = new ConstsFrameContext(__e, null);
        c._context_stack.add(__ctx);
        c.__kernel(__e);
        c._context_stack.remove(c._context_stack.size() - 1);
        return c;
    }

    private java.util.HashMap<String, java.util.ArrayList<String>> hsm_chain() {
        java.util.HashMap<String, java.util.ArrayList<String>> m = new java.util.HashMap<>();
        m.put("Running", new java.util.ArrayList<>(java.util.Arrays.asList("Running")));
        return m;
    }
    private ConstsCompartment __prepareEnter(String leaf, java.util.ArrayList<Object> state_args, java.util.ArrayList<Object> enter_args) {
        ConstsCompartment comp = null;
        for (String name : hsm_chain().get(leaf)) {
            ConstsCompartment new_comp = new ConstsCompartment(name);
            new_comp.state_args = new java.util.ArrayList<>(state_args);
            new_comp.enter_args = new java.util.ArrayList<>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp;
    }

    private void __prepareExit(java.util.ArrayList<Object> exit_args) {
        ConstsCompartment comp = __compartment;
        while (comp != null) {
            comp.exit_args = new java.util.ArrayList<>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(ConstsFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            ConstsCompartment next_compartment = __next_compartment;
            __next_compartment = null;
            // Exit the current (leaf) state.
            ConstsFrameEvent exit_event = new ConstsFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            ConstsFrameEvent forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                ConstsFrameEvent enter_event = new ConstsFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message.equals("$>")) {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                ConstsFrameEvent enter_event = new ConstsFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (ConstsFrameContext ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(ConstsFrameEvent __e) {
        if (__compartment.state.equals("Running")) {
            _state_Running(__e, __compartment);
        }
    }

    private void __transition(ConstsCompartment next) {
        __next_compartment = next;
    }

    public void tick() {
        ConstsFrameEvent __e = new ConstsFrameEvent("tick", new java.util.ArrayList<>());
        ConstsFrameContext __ctx = new ConstsFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        _context_stack.remove(_context_stack.size() - 1);
    }

    public int get_count() {
        ConstsFrameEvent __e = new ConstsFrameEvent("get_count", new java.util.ArrayList<>());
        ConstsFrameContext __ctx = new ConstsFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(_context_stack.get(_context_stack.size() - 1)._event);
        int __result = (int) _context_stack.get(_context_stack.size() - 1)._return;
        _context_stack.remove(_context_stack.size() - 1);
        return __result;
    }

    private void _state_Running(ConstsFrameEvent __e, ConstsCompartment compartment) {
        if (__e._message.equals("get_count")) {
            this._s_Running_hdl_user_get_count(__e, compartment);
            return;
        }
        if (__e._message.equals("tick")) {
            this._s_Running_hdl_user_tick(__e, compartment);
            return;
        }
    }

    private void _s_Running_hdl_user_get_count(ConstsFrameEvent __e, ConstsCompartment compartment) {
        _context_stack.get(_context_stack.size() - 1)._return = self.count;
    }

    private void _s_Running_hdl_user_tick(ConstsFrameEvent __e, ConstsCompartment compartment) {
        self.count = self.count + self.step
        if self.count >= self.limit {
            self.count = 0
        }
    }
}
